add mapper. attitude changed to one-sided. creating a UserProfile has been moved to the class UserProfileService. and other edits